@@ -5,6 +5,7 @@
 	* Fixed bug #9118: Copy Icon not enabled if the user has no edit-rights
 	* Fixed bug #8858: TV does not honour TCAdefaults. from PageTSconfig
 	* Added header palette
+	* Fixed bug #4823: Remove 'Templavoila' - item in Click Menu of Filelist for editors
 
 2008-05-12	Dmitry Dulepov	<dmitry@typo3.org>
 
